po: update po/ja_JP/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ja_JP/report.po
+++ b/po/ja_JP/report.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # AmishGramish <amish.gramish@gmail.com>, 2014
+# kent_ocean <ke.tanabe@gmail.com>, 2016
 # Masaki Muranaka <monaka@monami-ya.com>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Satomi Sato <puritira2015@gmail.com>, 2015
@@ -13,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:09+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-09 01:45+0000\n"
+"Last-Translator: kent_ocean <ke.tanabe@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/civicrm/civicrm/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2062,11 +2063,11 @@ msgstr ""
 
 #: CRM/Report/Form/Activity.php
 msgid "Assignee Name"
-msgstr ""
+msgstr "担当者名"
 
 #: CRM/Report/Form/Activity.php
 msgid "Target Name"
-msgstr ""
+msgstr "ターゲット名"
 
 #: CRM/Report/Form/Activity.php
 msgid "Source Email"
@@ -2074,7 +2075,7 @@ msgstr ""
 
 #: CRM/Report/Form/Activity.php
 msgid "Assignee Email"
-msgstr ""
+msgstr "担当者メール"
 
 #: CRM/Report/Form/Activity.php
 msgid "Target Email"
@@ -2086,7 +2087,7 @@ msgstr ""
 
 #: CRM/Report/Form/Activity.php
 msgid "Assignee Phone"
-msgstr ""
+msgstr "担当者TEL"
 
 #: CRM/Report/Form/Activity.php
 msgid "Target Phone"
@@ -2132,7 +2133,7 @@ msgstr ""
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Email on hold"
-msgstr ""
+msgstr "保留メール"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Last Year Total"
@@ -2180,7 +2181,7 @@ msgstr ""
 
 #: CRM/Report/Form/Instance.php templates/CRM/Report/Page/InstanceList.tpl
 msgid "View Results"
-msgstr ""
+msgstr "結果の表示"
 
 #: CRM/Report/Form/Instance.php
 msgid "Show Criteria"
@@ -2196,7 +2197,7 @@ msgstr ""
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "Hold date"
-msgstr ""
+msgstr "保留日"
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "Hold reset date"
@@ -2204,11 +2205,11 @@ msgstr ""
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Opt-outs"
-msgstr ""
+msgstr "オプトアウト"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Total Open Rate"
-msgstr ""
+msgstr "合計開封率"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Unique Open Rate"
@@ -2220,7 +2221,7 @@ msgstr ""
 
 #: CRM/Report/Form.php
 msgid "Developer"
-msgstr ""
+msgstr "開発者"
 
 #: CRM/Report/Form.php
 msgid "Grand Total"
@@ -2232,7 +2233,7 @@ msgstr ""
 
 #: CRM/Report/Form.php
 msgid "View results"
-msgstr ""
+msgstr "結果の表示"
 
 #: CRM/Report/Info.php
 msgid "view report sql"
@@ -2244,19 +2245,19 @@ msgstr ""
 
 #: CRM/Report/Page/InstanceList.php
 msgid "View as pdf"
-msgstr ""
+msgstr "PDFで表示"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "Print report"
-msgstr ""
+msgstr "レポート印刷"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "Export to csv"
-msgstr ""
+msgstr "CSVにエクスポート"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "Delete report"
-msgstr ""
+msgstr "レポートを削除"
 
 #: CRM/Report/Page/InstanceList.php
 msgid ""
