po: update po/ja_JP/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ja_JP/contribute.po
+++ b/po/ja_JP/contribute.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# kent_ocean <ke.tanabe@gmail.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Satomi Sato <puritira2015@gmail.com>, 2015
 # YASUDA Yukihiro <yukihiro@labornetjp.org>, 2012
@@ -11,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-09 02:56+0000\n"
+"Last-Translator: kent_ocean <ke.tanabe@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/civicrm/civicrm/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -562,7 +563,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/Product.php CRM/Contribute/Form/ManagePremiums.php
 msgid "Duration Unit"
-msgstr ""
+msgstr "継続単位"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Url Logo"
@@ -745,7 +746,7 @@ msgstr "クレジットカード支払いで、払い戻しの支払いは利用
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid "Direct Debit Information"
-msgstr ""
+msgstr "口座引落の情報"
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid "Refund Amount"
@@ -4959,7 +4960,7 @@ msgstr "これはテスト用のメールです。実際の金銭取引は発生
 
 #: CRM/Contribute/ActionMapping/ByType.php
 msgid "Contribution Type"
-msgstr ""
+msgstr "支援タイプ"
 
 #: CRM/Contribute/ActionMapping/ByType.php
 msgid "Soft Credit Role"
@@ -5011,11 +5012,11 @@ msgstr ""
 
 #: CRM/Contribute/DAO/PremiumsProduct.php
 msgid "Product"
-msgstr ""
+msgstr "製品"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Widget ID"
-msgstr ""
+msgstr "ウィジェットID"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Widget Title"
@@ -5023,7 +5024,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Widget Image Url"
-msgstr ""
+msgstr "ウィジェット画像URL"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Homepage Url"
@@ -5035,11 +5036,11 @@ msgstr ""
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Button Colour"
-msgstr ""
+msgstr "ボタンの色"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Bar Color"
-msgstr ""
+msgstr "バーの色"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Main Text Color"
@@ -5051,7 +5052,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Backgroup Color"
-msgstr ""
+msgstr "背景色"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Other Backgroun Colour"
@@ -5208,11 +5209,11 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/PaymentInstrument.tpl
 msgid "New Payment Method"
-msgstr ""
+msgstr "新しい支払方法"
 
 #: templates/CRM/Contribute/Form/PaymentInstrument.tpl
 msgid "Edit Payment Method"
-msgstr ""
+msgstr "支払方法の編集"
 
 #: templates/CRM/Contribute/Form/PaymentInstrument.tpl
 msgid "Delete Payment Method"
