po: update po/ja_JP/financial.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ja_JP/financial.po
+++ b/po/ja_JP/financial.po
@@ -5,13 +5,14 @@
 # Translators:
 # jinoueki <jinoueki@gmail.com>, 2013
 # Keiko Jochi, 2015
+# kent_ocean <ke.tanabe@gmail.com>, 2016
 # Satomi Sato <puritira2015@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-09 00:46+0000\n"
+"Last-Translator: kent_ocean <ke.tanabe@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/civicrm/civicrm/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -113,7 +114,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/EntityFinancialTrxn.php
 msgid "Financial Transaction Id"
-msgstr ""
+msgstr "金融取引ID"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account ID"
@@ -172,7 +173,7 @@ msgstr "デフォルトの金融口座"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction ID"
-msgstr ""
+msgstr "金融取引ID"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction From Account"
@@ -204,7 +205,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Transaction Result Code"
-msgstr ""
+msgstr "取引結果コード"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction Status Id"
@@ -386,7 +387,7 @@ msgstr "タスク"
 
 #: CRM/Financial/Form/BatchTransaction.php CRM/Financial/Form/Search.php
 msgid "- actions -"
-msgstr ""
+msgstr "- 操作 -"
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Remove from Batch"
@@ -477,7 +478,7 @@ msgstr "取引数"
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "Please select a valid contact."
-msgstr ""
+msgstr "正しい連絡先を選択してください。"
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "Number of Transactions should a positive number"
@@ -836,11 +837,11 @@ msgstr "更新"
 
 #: templates/CRM/Financial/Page/BatchTransaction.tpl
 msgid "Are you sure you want to close this batch?"
-msgstr ""
+msgstr "このバッチを閉じてよろしいですか？"
 
 #: templates/CRM/Financial/Page/BatchTransaction.tpl
 msgid "Are you sure you want to close and export this batch?"
-msgstr ""
+msgstr "このバッチを閉じてエクスポートしてもよろしいですか？"
 
 #: templates/CRM/Financial/Page/FinancialAccount.tpl
 msgid ""
@@ -960,7 +961,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Currency ID"
-msgstr ""
+msgstr "通貨ID"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Currency Symbol"
@@ -972,7 +973,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Full Currency Name"
-msgstr ""
+msgstr "通貨名"
 
 #: CRM/Financial/DAO/EntityFinancialAccount.php
 msgid "Entity Financial Account ID"
@@ -1013,11 +1014,11 @@ msgstr ""
 #: CRM/Financial/DAO/PaymentProcessor.php
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Suffix for PHP class name implementation"
-msgstr ""
+msgstr "PHPクラス名実装のためのサフィックス"
 
 #: templates/CRM/Financial/Form/FinancialAccount.hlp
 msgid "Financial Account Owner"
-msgstr ""
+msgstr "金融口座の所有者"
 
 #: templates/CRM/Financial/Form/FinancialAccount.hlp
 msgid ""
