--- a/po/ja_JP/menu.po
+++ b/po/ja_JP/menu.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # jinoueki <jinoueki@gmail.com>, 2013
+# kent_ocean <ke.tanabe@gmail.com>, 2016
 # Masaki Muranaka <monaka@monami-ya.com>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Satomi Sato <puritira2015@gmail.com>, 2015
@@ -13,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-09 00:50+0000\n"
+"Last-Translator: kent_ocean <ke.tanabe@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/civicrm/civicrm/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1341,7 +1342,7 @@ msgstr "CiviCRM ニュース"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Getting Started"
-msgstr ""
+msgstr "さあ始めよう"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2155,15 +2156,15 @@ msgstr "戸別訪問、フォーンバンキング、訪問リスト、その他
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Payment Methods"
-msgstr ""
+msgstr "支払い方法"
 
 msgctxt "menu"
 msgid "Configure CKEditor"
-msgstr ""
+msgstr "CKEditorの設定"
 
 msgctxt "menu"
 msgid "Batch Merge Duplicate Contacts"
-msgstr ""
+msgstr "重複連絡先のバッチマージ"
 
 msgctxt "menu"
 msgid "Insert CiviCRM Content"
@@ -2180,37 +2181,37 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "System Status"
-msgstr ""
+msgstr "システムステータス"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Components"
-msgstr ""
+msgstr "コンポーネント"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Extensions"
-msgstr ""
+msgstr "エクステンション"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Activity Details"
-msgstr ""
+msgstr "アクティビティの詳細"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Activity Summary"
-msgstr ""
+msgstr "アクティビティ概要"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Shows activity statistics by type / date"
-msgstr ""
+msgstr "タイプ / 日付に関するアクティビティ統計を表示"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Pledge Detail"
-msgstr ""
+msgstr "プレッジ詳細"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
