--- a/po/ca_ES/contribute.po
+++ b/po/ca_ES/contribute.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-26 09:37+0000\n"
+"PO-Revision-Date: 2016-06-09 08:58+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -4671,7 +4671,7 @@ msgstr ""
 msgid ""
 "Click <a %1>Record Contribution</a> to record a new contribution received "
 "from this contact."
-msgstr ""
+msgstr "Cliqueu a <a %1>Registra una contribució</a> per registrar una nova contribució rebuda per aquest contacte."
 
 #: templates/CRM/Contribute/Page/Tab.tpl
 msgid ""
