--- a/po/fr_FR/admin.po
+++ b/po/fr_FR/admin.po
@@ -10,6 +10,7 @@
 # Caroline Servissolle <cservissolle13207@gmail.com>, 2015
 # elma dontovska <elmadont@gmail.com>, 2016
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
+# Imane Sadaoui <imane.sadaoui@gmail.com>, 2016
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
 # Nicolas GAILLARD <ngaillard.vosges@gmail.com>, 2015
 # Paul Caranton <caranton.paul@gmail.com>, 2015
@@ -17,6 +18,7 @@
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Philippe SAMPONT <PhilippeS@cncd.be>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# ShevAbam, 2016
 # Vincent Lucy <vincent.lucy@gmail.com>, 2014
 # Vincent <vincent.primault@gmail.com>, 2011
 # William Blondel <william.blondel@gmx.fr>, 2016
@@ -26,8 +28,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:37+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-09 12:55+0000\n"
+"Last-Translator: Imane Sadaoui <imane.sadaoui@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -286,7 +288,7 @@ msgstr "L'adresse de retour doit utiliser un format d'adresse électronique vali
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Server"
-msgstr ""
+msgstr "Serveur"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Bounce Processing"
@@ -6441,7 +6443,7 @@ msgstr "Sélectionner une étiquette"
 
 #: CRM/Admin/Form/CMSUser.php
 msgid "Synchronize Complete"
-msgstr ""
+msgstr "La synchronisation est terminée"
 
 #: CRM/Admin/Form/Job.php
 msgid ""
@@ -6449,15 +6451,15 @@ msgid ""
 "              The result will land on the same day of the month except for days 29-31 when the target month contains fewer days than the previous month.\n"
 "              For example, if a job is scheduled to run on August 31st, the following invocation will occur on October 1st, and then the 1st of every month thereafter.\n"
 "              To avoid this issue, please schedule Monthly and Quarterly jobs to run within the first 28 days of the month."
-msgstr ""
+msgstr "Les valeurs relatives du mois sont calculés en fonction de la durée qu'elles traverse au cours du (des) mois.\nLe résultat va tomber sur le même jour du mois, sauf pour les jours 29- 31 lorsque la cible du mois contient moin de jours que le mois précédent.\nPar exemple, si un travail est planifié pour être exécuté le 31 Août, l'invocation suivante aura lieu le 1er Octobre, puis le 1er de chaque mois qui suit.\nPour éviter ce problème, il faut planifier les travaux d'une maniére mensuels et trimestriels afin de les lancer dans les 28 premiers jours du mois."
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Menu Item"
-msgstr ""
+msgstr "Menu d'élément"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Unrestricted"
-msgstr ""
+msgstr "Libre"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "After menu element"
@@ -6469,19 +6471,19 @@ msgstr ""
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Separator"
-msgstr ""
+msgstr "Séparateur"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Top level"
-msgstr ""
+msgstr "Haut niveau"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Enable Access Control by Financial Type"
-msgstr ""
+msgstr "Activer le contrôle d'accès par le type financier"
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Configure CKEditor"
-msgstr ""
+msgstr "Configurer CKEditor"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Contacts with no preferred language"
