po: update po/ca_ES/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-26 09:38+0000\n"
+"PO-Revision-Date: 2016-06-09 08:56+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -1081,7 +1081,7 @@ msgstr "Desat"
 
 #: CRM/Activity/Form/ActivityFilter.php CRM/Core/SelectValues.php
 msgid "Include"
-msgstr "Incloure"
+msgstr "Inclou"
 
 #: CRM/Activity/Form/ActivityFilter.php
 msgid "- all activity type(s) -"
@@ -1094,7 +1094,7 @@ msgstr "Exclou"
 
 #: CRM/Activity/Form/ActivityFilter.php
 msgid "- select activity type -"
-msgstr "- seleccionar el tipus d'activitat -"
+msgstr "- selecciona el tipus d'activitat -"
 
 #: CRM/Activity/Form/ActivityLinks.php CRM/Activity/Page/AJAX.php
 #: CRM/Contact/BAO/Contact.php
