po: update po/fr_FR/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/common-base.po
+++ b/po/fr_FR/common-base.po
@@ -43,7 +43,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-02 14:17+0000\n"
+"PO-Revision-Date: 2016-06-10 13:15+0000\n"
 "Last-Translator: Philippe SAMPONT <PhilippeS@cncd.be>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -15107,7 +15107,7 @@ msgstr "Cliquez sur <strong>Fusionner</strong> pour déplacer les données du co
 
 #: templates/CRM/Contact/Form/Merge.tpl
 msgid "Flip between original and duplicate contacts."
-msgstr "Basculer les contacts original et doublon."
+msgstr "Permuter les contacts original et doublon."
 
 #: templates/CRM/Contact/Form/Merge.tpl
 msgid "Mark this pair as not a duplicate."
@@ -24942,11 +24942,11 @@ msgstr ""
 
 #: CRM/Contact/Form/Merge.php
 msgid "Merge and go to Next Pair"
-msgstr ""
+msgstr "Fusionner et aller à la paire suivante"
 
 #: CRM/Contact/Form/Merge.php
 msgid "Merge and go to Listing"
-msgstr ""
+msgstr "Fusionner et aller à la liste"
 
 #: CRM/Contact/Form/Search/Criteria.php
 #: templates/CRM/Contact/Form/Search/Advanced.hlp
@@ -25014,11 +25014,11 @@ msgstr ""
 
 #: CRM/Contact/Page/AJAX.php
 msgid "flip"
-msgstr ""
+msgstr "Permuter"
 
 #: CRM/Contact/Page/DedupeMerge.php
 msgid "Nothing to merge."
-msgstr ""
+msgstr "Rien à fusionner."
 
 #: CRM/Contact/Page/DedupeMerge.php
 msgid "You do not have permission to force merge duplicate contact records"
@@ -25102,7 +25102,7 @@ msgstr ""
 
 #: CRM/Contact/Task.php
 msgid "Merge contacts"
-msgstr ""
+msgstr "Fusionner les contacts"
 
 #: CRM/Contact/Task.php
 msgid "Map contacts"
@@ -26137,11 +26137,11 @@ msgstr ""
 
 #: templates/CRM/Contact/Form/Merge.tpl
 msgid "overwrite"
-msgstr ""
+msgstr "écraser"
 
 #: templates/CRM/Contact/Form/Merge.tpl
 msgid "match"
-msgstr ""
+msgstr "identique"
 
 #: templates/CRM/Contact/Form/Merge.tpl
 msgid "migrate"
@@ -26183,31 +26183,31 @@ msgstr ""
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Contact 2"
-msgstr ""
+msgstr "Contact 2"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Email 1"
-msgstr ""
+msgstr "Courriel 1"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Street Address 1"
-msgstr ""
+msgstr "Rue 1"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Street Address 2"
-msgstr ""
+msgstr "Rue 2"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Postcode 1"
-msgstr ""
+msgstr "Code postal 1"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Postcode 2"
-msgstr ""
+msgstr "Code postal 2"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Post Code"
-msgstr ""
+msgstr "Code postal"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Conflicts"
@@ -26219,7 +26219,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Postcode"
-msgstr ""
+msgstr "Code postal"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Force Merge Selected Duplicates"
@@ -26251,15 +26251,15 @@ msgstr ""
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Batch Merge Selected Duplicates"
-msgstr ""
+msgstr "Fusionner par lot les doublons sélectionnés"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Batch Merge All Duplicates"
-msgstr ""
+msgstr "Fusionner tous les doublons par lot"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Flip Selected Duplicates"
-msgstr ""
+msgstr "Permuter les doublons sélectionnés"
 
 #: templates/CRM/Core/Form/ShortCode.tpl
 msgid "Can't find your form? Make sure it is active."
@@ -26336,7 +26336,7 @@ msgstr ""
 
 #: templates/CRM/common/l10n.js.tpl
 msgid "Showing %1 to %2 of %3 entries"
-msgstr ""
+msgstr "Affichage de %1 à %2 sur %3 entrées"
 
 #: templates/CRM/common/l10n.js.tpl
 msgid "(filtered from %1 total entries)"
@@ -26344,7 +26344,7 @@ msgstr ""
 
 #: templates/CRM/common/l10n.js.tpl
 msgid "Show %1 entries"
-msgstr ""
+msgstr "Afficher %1 entrées"
 
 #: templates/CRM/common/success.tpl
 msgid "The database will be upgraded from %1 to %2."
