po: update po/nl_NL/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-01 19:01+0000\n"
+"PO-Revision-Date: 2016-06-13 14:52+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -2146,7 +2146,7 @@ msgstr "Let op: "
 
 #: CRM/Contact/BAO/Query.php
 msgid "Note: Subject Only"
-msgstr "NB.: Alleen onderwerp"
+msgstr "NB: Alleen onderwerp"
 
 #: CRM/Contact/BAO/Query.php CRM/Core/Form/Search.php
 msgid "Name or Email"
@@ -14810,7 +14810,7 @@ msgstr "U kunt ook algemene e-mail en/of telefoon informatie in de onderstaande 
 msgid ""
 "The name of the organization or entity which owns this CiviCRM site or "
 "domain. This is the default organization contact record."
-msgstr "De naam van de organisatie of de eenheid die eigenaar is van de CiviCRM website of domein. Dit is het standaard organisatie contact."
+msgstr "De naam van de organisatie of de eenheid die eigenaar is van de CiviCRM website of domein. Dit is het standaardcontact van de organisatie."
 
 #: templates/CRM/Contact/Form/Domain.tpl
 msgid ""
@@ -15082,7 +15082,7 @@ msgid ""
 "left into the Main Contact. In addition to the contact data (address, phone,"
 " email...), you may choose to move all or some of the related activity "
 "records (groups, contributions, memberships, etc.)."
-msgstr "Klik <strong>Samenvoegen</strong> om de gegevens van het duplicaat Contact aan de linkerzijde te verplaatsen naar het  Contact zelf. Naast de contactgegevens (adres, telefoon, e-mail...), kan u kiezen om alle of delen van de gerelateerde activiteitsrecords (groepen, bijdragen, lidmaatschappen, enz.) te verplaatsen."
+msgstr "Klik <strong>Samenvoegen</strong> om de gegevens van het duplicaat Contact aan de linkerzijde te verplaatsen naar het  Contact zelf. Naast de contactgegevens (adres, telefoon, e-mail...), kunt u kiezen om alle of delen van de gerelateerde activiteitsrecords (groepen, bijdragen, lidmaatschappen, enz.) te verplaatsen."
 
 #: templates/CRM/Contact/Form/Merge.tpl
 msgid "Flip between original and duplicate contacts."
@@ -15219,7 +15219,7 @@ msgid ""
 "Advanced Search returns your results as Contact records by default. However,"
 " you may want to get another record type instead. For example, you may want "
 "to see all the Activity records which match your search criteria."
-msgstr "Geavanceerd zoeken geeft uw resultaten standaard terug als contactrecords. Het kan echter zijn dat u liever een ander recordtype wilt. Bijvoorbeeld als u alle activiteitenrecords wilt zien die aan uw zoekvoorwaarden voldoen."
+msgstr "Geavanceerd zoeken geeft uw resultaten standaard terug als contactrecords. Het kan echter zijn dat u liever een ander recordtype wilt. Bijvoorbeeld als u alle activiteitenrecords wilt zien die aan uw zoekcriteria voldoen."
 
 #: templates/CRM/Contact/Form/Search/Advanced.hlp
 msgid ""
@@ -15426,7 +15426,7 @@ msgid ""
 "You can also create additional sets of criteria: <em>Also include contacts "
 "where... State IS California AND City IS Los Angeles AND Birth Date is later"
 " than (>) Jan 1, 1985</em>"
-msgstr "U kunt ook criteria toevoegen: <em>Ook contacten waar... Land = Nederland AND Plaats = Arnhem AND Geboortedatum na (.) Jan 1, 1985</em>"
+msgstr "U kunt ook criteria toevoegen: <em>Ook contacten waar... Land = Nederland AND Plaats = Arnhem AND Geboortedatum na (>) Jan 1, 1985</em>"
 
 #: templates/CRM/Contact/Form/Search/Builder.hlp
 msgid "For more information see %1."
@@ -16275,7 +16275,7 @@ msgid ""
 "CiviCRM Components. Enable CiviContribute, CiviMember, and/or CiviEvent. "
 "Then navigate to the Import option found in each component's menu (e.g. "
 "CiviContribute &raquo; Import Contributions)."
-msgstr "Na het importeren van contacten, wilt u mogelijk ook <strong>bijdragen, lidmaatschappen en/of deelnames</strong> importeren van deze contacten. Controleer dan eerst of de bijbehorende CiviCRM component ingeschakeld is op  Beheer CiviCRM &raquo; Algemene Instellingen &raquo; Functies aanzetten. Schakel CiviContribute, CiviMember en/of CiviEvent in. Ga dan naar de importoptie in het menu van het component."
+msgstr "Na het importeren van contacten, wilt u mogelijk ook <strong>bijdragen, lidmaatschappen en/of deelnames</strong> importeren van deze contacten. Controleer dan eerst of de bijbehorende CiviCRM component ingeschakeld is op  Beheer CiviCRM &raquo; Algemene Instellingen &raquo; Componenten inschakelen. Schakel CiviContribute, CiviMember en/of CiviEvent in. Ga dan naar de importoptie in het menu van het component. (bijv. CiviContribute &raquo; Bijdragen importeren)."
 
 #: templates/CRM/Contact/Import/Form/DataSource.hlp
 msgid ""
@@ -16416,7 +16416,7 @@ msgid ""
 "options could have significant impact on your existing data. You should "
 "define and select a rule that is strict enough to ensure there are no false "
 "positive matches."
-msgstr "Let er bij het kiezen van een overeenkomstregel op dat deze velden bevat die ook voorkomen in uw importbestand. Wees er ook van bewust dat de opties bijwerken en aanvullen een aanzienlijke invloed op uw bestaande gegevens kunnen hebben. U dient een regel te definiëren en te selecteren die voldoende strikt is om er zeker van te zijn dat er foute overeenkomsten worden voorkomen."
+msgstr "Let er bij het kiezen van een overeenkomstregel op dat deze velden bevat die ook voorkomen in uw importbestand. Wees er ook van bewust dat de opties bijwerken en aanvullen een aanzienlijke invloed op uw bestaande gegevens kunnen hebben. U dient een regel te definiëren en te selecteren die voldoende strikt is om er zeker van te zijn dat er geen foute overeenkomsten zijn."
 
 #: templates/CRM/Contact/Import/Form/DataSource.hlp
 msgid "Field Separator"
@@ -19271,7 +19271,7 @@ msgid ""
 "recipients will be displayed on the next screen. Use this as a 'reality-"
 "check' to help you confirm that you've targeted (and excluded) the desired "
 "recipients."
-msgstr "Na het klikken op <strong>Volgende</strong> wordt het aantal geselecteerde ontvangers getoond. Dit is bedoeld als een controle voor u om te kijken het selecteren van ontvangers goed is gegaan."
+msgstr "Na het klikken op <strong>Volgende</strong> wordt het aantal geselecteerde ontvangers getoond. Dit is bedoeld als een controle voor u om te kijken of het selecteren van de ontvangers goed is gegaan."
 
 #: templates/CRM/SMS/Form/Group.hlp
 msgid "Exclude Groups"
@@ -20136,7 +20136,7 @@ msgstr "Knop Opslaan"
 
 #: templates/CRM/common/accesskeys.hlp
 msgid "Add a new record in each tab (Activities, Tags,..etc)"
-msgstr "Voeg in elke tab een nieuw record toe (Activiteit, Kenmerk,..enz.)"
+msgstr "Voeg een nieuw record toe in elke tab (Activiteit, Kenmerk, ...)"
 
 #: templates/CRM/common/accesskeys.tpl
 msgid "Access Keys:"
@@ -21882,7 +21882,7 @@ msgstr "Rapport Persoonlijke Campagne"
 msgid ""
 "Summarizes amount raised and number of contributors for each Personal "
 "Campaign Page."
-msgstr "Samenvatting binnengehaalde bedrag met het aantal donateurs voor alle persoonlijke campagne pagina's."
+msgstr "Samenvatting binnengehaalde bedrag met het aantal donateurs voor alle persoonlijke campagnepagina's."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Pledge Summary Report"
@@ -23240,7 +23240,7 @@ msgstr "Persoonlijke campagne pagina's - Welkom supporter"
 
 #: xml/templates/civicrm_msg_template.tpl
 msgid "Personal Campaign Pages - Owner Notification"
-msgstr "Persoonlijke Campagne Pagina's - Eigenaar notificatie"
+msgstr "Persoonlijke campagnepagina's - Eigenaar notificatie"
 
 #: xml/templates/civicrm_msg_template.tpl
 msgid "Additional Payment Receipt or Refund Notification"
@@ -26769,7 +26769,7 @@ msgid ""
 " you have modified these templates, please review the new default versions "
 "and implement updates as needed to your copies (Administer > Communications "
 "> Message Templates > System Workflow Messages)."
-msgstr "De standaardversie van het volgende  berichtsjabloon is gewijzigd: <ul><li>Persoonlijke campagne pagina's - notificatie beheerder<li></ul> Als u dit  sjabloon heeft gewijzigd, bekijk dan de nieuwe standaardversie en breng de noodzakelijke wijzigingen zelf aan in uw versie (Beheer > Communicatie > Berichtsjabloon > Werkstroomberichten)."
+msgstr "De standaardversie van het volgende  berichtsjabloon is gewijzigd: <ul><li>Persoonlijke campagnepagina's - notificatie beheerder<li></ul> Als u dit  sjabloon heeft gewijzigd, bekijk dan de nieuwe standaardversie en breng de noodzakelijke wijzigingen zelf aan in uw versie (Beheer > Communicatie > Berichtsjabloon > Werkstroomberichten)."
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "The custom fatal error template setting has been removed."
