po: update po/nl_NL/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/admin.po
+++ b/po/nl_NL/admin.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-01 14:11+0000\n"
+"PO-Revision-Date: 2016-06-13 13:52+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -3990,7 +3990,7 @@ msgid ""
 "profiles on public pages. For most situations, you should use the 'Limit "
 "List to Group' setting when configuring a contact reference field which will"
 " be used in public forms to prevent exposing your entire contact list."
-msgstr "De geselecteerde velden worden in autoaanvullende keuzelijsten voor referentie aan contact velden getoond. De contactnaam wordt altijd opgenomen. NB: U moet het recht voor toegang tot de referentie aan contact toekennen aan anonieme gebruikers, als u dit wilt laten gebruiken in profielen op openbare pagina's.  Meestal is hierbij het gebruik van de instelling 'Beperkt overzicht tot groep' nodig om te voorkomen dat al uw contacten openbaar worden."
+msgstr "De geselecteerde velden worden in autoaanvullende keuzelijsten voor referentie aan contactvelden getoond. De contactnaam wordt altijd opgenomen. NB: U moet het recht voor toegang tot de referentie aan contact toekennen aan anonieme gebruikers, als u dit wilt laten gebruiken in profielen op openbare pagina's.  Meestal is hierbij het gebruik van de instelling 'Beperkt overzicht tot groep' nodig om te voorkomen dat al uw contacten openbaar worden."
 
 #: templates/CRM/Admin/Form/Setting/Search.tpl
 msgid ""
@@ -5018,7 +5018,7 @@ msgid ""
 "<p>You may also want to check the directory for <a href=\"%2/%1\" "
 "target=\"_blank\">native %1 modules</a> that may be useful for you (CMS-"
 "specific modules are not listed here)."
-msgstr "<p>U kunt ook de <a href=\"%2/%1\" target=\"_blank\">extensies map</a> voor %1 modules controleren of er voor U bruikbare extensies zijn (CMS-specifieke modules worden hier niet getoond)."
+msgstr "<p>U kunt ook de <a href=\"%2/%1\" target=\"_blank\">extensie-map</a> voor %1 modules controleren of er voor u bruikbare extensies zijn (CMS-specifieke modules worden hier niet getoond)."
 
 #: templates/CRM/Admin/Page/Extensions/AddNew.tpl
 #: templates/CRM/Admin/Page/Extensions/Main.tpl
