po: update po/nl_NL/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/mailing.po
+++ b/po/nl_NL/mailing.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-01 14:09+0000\n"
+"PO-Revision-Date: 2016-06-13 14:45+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -808,7 +808,7 @@ msgstr "Inlichten Inplanner"
 
 #: CRM/Mailing/Form/Test.php
 msgid "You did not provide an email address or select a group."
-msgstr "Je moet of een e-mailadres invullen of een groep selecteren."
+msgstr "U moet een e-mailadres invullen of een groep selecteren."
 
 #: CRM/Mailing/Form/Test.php
 msgid "Test not sent."
@@ -1880,14 +1880,14 @@ msgid ""
 "CiviCRM will always dedupe your mailing based on unique contact records. For"
 " example, if a contact is in three of the groups you are including in your "
 "mailing, they will only be sent one copy of the email."
-msgstr "CIVICRM zal altijd dubbele e-mail voorkomen, gebaseerd op unieke contactgegevens. Voorbeeld: Als een contact in drie groepen zit die u toegevoegd hebt aan uw mailing, dan zullen ze maar een e-mail ontvangen."
+msgstr "CIVICRM zal altijd dubbele e-mail voorkomen, gebaseerd op unieke contactgegevens. Voorbeeld: Als een contact in drie groepen zit die u heeft toegevoegd aan uw mailing, dan zal het contact maar een e-mail ontvangen."
 
 #: templates/CRM/Mailing/Form/Group.hlp
 msgid ""
 "However, if the same email is used by multiple contacts, that email address "
 "will receive multiple copies of the email -- one for each contact using that"
 " address."
-msgstr "Echter, als het zelfde e-mailadres door meerdere contacten gebruikt wordt, dan zal het e-mailadres meerdere e-mails ontvangen, een voor elk contact dat het e-mailadres gebruikt."
+msgstr "Echter, als hetzelfde e-mailadres door meerdere contacten wordt gebruikt, dan zal het e-mailadres meerdere e-mails ontvangen, een voor elk contact dat het e-mailadres gebruikt."
 
 #: templates/CRM/Mailing/Form/Group.hlp
 msgid ""
@@ -1895,7 +1895,7 @@ msgid ""
 "Note that when using this option and including contact tokens in your email "
 "content, the email with it's respective tokens will only be created for one "
 "of the matching contacts."
-msgstr "Deze optie selecteren zorgt ervoor dat slechts één e-mail wordt verzonden aan elk adres. Merk op dat als u deze optie gebruikt en u gebruikt tokens in de inhoud van uw e-mail, dan zal de e-mail met zijn bijbehorende tokens slechts voor een van de bijbehorende contacten aangemaakt worden."
+msgstr "Het selecteren van de optie zorgt ervoor dat er slechts één e-mail wordt verzonden naar elk e-mailadres. Merk op dat als u deze optie tegelijk met tokens in de inhoud van uw e-mail gebruikt, dan zal de e-mail met zijn bijbehorende tokens slechts voor een van de bijbehorende contacten worden aangemaakt."
 
 #: templates/CRM/Mailing/Form/Group.hlp
 msgid "Email selection"
@@ -1973,7 +1973,7 @@ msgid ""
 "included groups by selecting one or more <strong>Excluded Groups</strong>. "
 "Contacts who are in both groups will NOT receive the mailing (they are "
 "'excluded')."
-msgstr "U hebt ook de optie om sommige contacten <strong> uit te sluiten</strong> uit uw ingevoegde groepen door één of meer <strong>Uitgesloten groepen</strong>. Contacten die in beide groepen zitten zullen GEEN mailing ontvangen (ze zijn 'uitgesloten')."
+msgstr "U hebt ook de optie om sommige contacten <strong> uit te sluiten</strong> uit uw toegevoegde groepen door één of meer <strong>Uitgesloten groepen</strong>. Contacten die in beide groepen zitten zullen GEEN mailing ontvangen (ze zijn 'uitgesloten')."
 
 #: templates/CRM/Mailing/Form/Group.hlp
 msgid "Include Mailings"
@@ -2327,7 +2327,7 @@ msgid ""
 "\"Public Pages\" will make the content of this mailing viewable everyone who"
 " has the permission \"view public CiviMail content\". Note that even people "
 "who did not receive the mailing would be able to find it via search engines."
-msgstr "\"Openbare pagina's\" dit betekent dat de inhoud van de mailing door iedereen met het recht \"view public CiviMail content\" kan worden gelezen. NB. Ook mensen die de mailing niet ontvangen hebben kunnen dan de mailing vinden via zoekmachines."
+msgstr "\"Openbare pagina's\" dit betekent dat de inhoud van de mailing door iedereen met het recht \"view public CiviMail content\" kan worden gelezen. Ook mensen die de mailing niet ontvangen hebben kunnen dan de mailing vinden via zoekmachines."
 
 #: templates/CRM/Mailing/MailingUI.hlp
 msgid ""
