po: update po/nl_NL/install.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/install.po
+++ b/po/nl_NL/install.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-31 18:30+0000\n"
+"PO-Revision-Date: 2016-06-13 14:11+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -449,7 +449,7 @@ msgid ""
 "and Subscribers access to public CiviCRM forms and features. We recommend "
 "that you <a %1>review these permissions</a> to ensure that they are "
 "appropriate for your requirements (<a %2>learn more...</a>)"
-msgstr "De gebruikersmachtigingen van WordPress zijn automatisch ingesteld - hiermee krijgen anonieme en geregistreerde gebruikers toegang tot openbare CiviCRM-formulieren en -functionaliteit. We raden u aan <a %1>deze machtigingen te controleren</a> om te zien dat ze aan uw eisen voldoen. (<a %2>meer weten...</a>)"
+msgstr "De gebruikersmachtigingen van WordPress zijn automatisch ingesteld - hiermee krijgen anonieme en geverifieerde gebruikers toegang tot openbare CiviCRM-formulieren en -functionaliteit. We raden u aan <a %1>deze machtigingen te controleren</a> om te zien dat ze aan uw eisen voldoen. (<a %2>meer weten...</a>)"
 
 #: install/index.php
 msgid "<a %1>Refer to the online documentation for more information</a>"
