po: update po/nl_NL/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/drupal-civicrm.po
+++ b/po/nl_NL/drupal-civicrm.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-06-01 14:10+0000\n"
+"PO-Revision-Date: 2016-06-13 13:38+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -558,7 +558,7 @@ msgid ""
 "installing, you can often find solutions to your issue by searching for the "
 "error message in the <a href='!3'>installation support section of the "
 "community forum</a>.</strong></p>"
-msgstr "Kijk in de <a href='!1'>Drupal Installation Guide</a> en de <a href='!2'>Trouble-shooting page</a> voor verdere hulp. Wanneer u nog hulp nodig heeft bij de installatie dan kan u vaak een oplossing vinden door uw foutbericht te zoeken in de <a href='!3'>installation support section of the community forum</a>.</strong></p>"
+msgstr "Kijk in de <a href='!1'>Drupal Installation Guide</a> en de <a href='!2'>Trouble-shooting page</a> voor verdere hulp. Wanneer u nog hulp nodig heeft bij de installatie dan kunt u vaak een oplossing vinden door uw foutbericht te zoeken in de <a href='!3'>installation support section of the community forum</a>.</strong></p>"
 
 #: drupal/civicrm.module
 msgid ""
