--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-06 19:01+0000\n"
+"PO-Revision-Date: 2016-06-13 20:01+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -26145,7 +26145,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Form/Search/AdvancedCriteria.tpl
 msgid "Display Settings For Results"
-msgstr ""
+msgstr "Inställningar för resultatvisning"
 
 #: templates/CRM/Contact/Form/Task/PDFLetterCommon.tpl
 msgid "Downloading..."
