po: update po/nl_NL/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/common-components.po
+++ b/po/nl_NL/common-components.po
@@ -15,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-19 09:46+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-06-13 14:17+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1364,7 +1364,7 @@ msgid ""
 "to send emails to people inviting them to visit their page and make a "
 "contribution? NOTE: Tell a Friend emails will automatically include a link "
 "to the sender's campaign page."
-msgstr "Kan de eigenaar van een persoonlijke campagne pagina de functie 'Mond-tot-mondreclame' gebruiken om mails te sturen aan mensen met een uitnodiging om hun pagina te bezoeken en een donatie te doen? NB: Deze mails bevatten een link naar de campagnepagina van de afzender."
+msgstr "Kan de eigenaar van een persoonlijke campagnepagina de functie 'Mond-tot-mondreclame' gebruiken om mails te sturen aan mensen met een uitnodiging om hun pagina te bezoeken en een donatie te doen? NB: Deze mails bevatten een link naar de campagnepagina van de afzender."
 
 #: templates/CRM/Contribute/Form/ContributionPage/PCP.hlp
 #: templates/CRM/PCP/Form/Contribute.hlp templates/CRM/PCP/Form/Event.hlp
