po: update po/nl_NL/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/contribute.po
+++ b/po/nl_NL/contribute.po
@@ -20,7 +20,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-01 13:26+0000\n"
+"PO-Revision-Date: 2016-06-13 14:23+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -4033,7 +4033,7 @@ msgstr "Bijdragepagina's zoeken"
 
 #: templates/CRM/Contribute/Form/SearchContribution.tpl
 msgid "Complete OR partial Contribution Page title."
-msgstr "Volledige OF gedeeltelijke titel van Bijdrage pagina."
+msgstr "Volledige OF gedeeltelijke titel van bijdragepagina."
 
 #: templates/CRM/Contribute/Form/Selector.tpl
 #: templates/CRM/Contribute/Page/UserDashboard.tpl
@@ -4416,7 +4416,7 @@ msgstr "Geen bijdragepagina gevonden. Suggesties:"
 
 #: templates/CRM/Contribute/Page/ContributionPage.tpl
 msgid "Or you can <a href='%1'>browse all available Contribution Pages</a>."
-msgstr "Of u kan <a href='%1'>alle beschikbare bijdragepagina's bekijken</a>."
+msgstr "Of u kunt <a href='%1'>alle beschikbare bijdragepagina's bekijken</a>."
 
 #: templates/CRM/Contribute/Page/ContributionPage.tpl
 msgid ""
@@ -4620,7 +4620,7 @@ msgstr "Ander relatiegeschenk aanbieden op deze bijdragepagina"
 msgid ""
 "There are no premiums offered on this contribution page yet. You can <a "
 "href='%1'>add one</a>."
-msgstr "Er wordt nog geen relatiegeschenk op deze bijdrage pagina aangeboden.  U kunt er <a href='%1'>een aanbieden</a>."
+msgstr "Er wordt nog geen relatiegeschenk op deze bijdragepagina aangeboden.  U kunt er <a href='%1'>een aanbieden</a>."
 
 #: templates/CRM/Contribute/Page/Premium.tpl
 msgid ""
