--- a/po/de_DE/admin.po
+++ b/po/de_DE/admin.po
@@ -15,6 +15,7 @@
 # Fabian <schuttenberg@systopia.de>, 2013-2016
 # gnpma100 <gnpma100@gmail.com>, 2014
 # Hartmut Holzgraefe <hartmut@php.net>, 2011
+# b2daniel <info@daniel-goetz.de>, 2016
 # Michal Seidler, 2012
 # Jan <unreal@gmx.ch>, 2013
 # Jens-Erik Weber <JensErikWeber@gmail.com>, 2013
@@ -34,8 +35,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:37+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-14 14:41+0000\n"
+"Last-Translator: b2daniel <info@daniel-goetz.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -294,7 +295,7 @@ msgstr "Der Return-Pfad muss ein gültiges E-Mail-Adressen-Format verwenden."
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Server"
-msgstr ""
+msgstr "Server"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Bounce Processing"
@@ -331,7 +332,7 @@ msgstr "Änderungen NICHT übernommen"
 
 #: CRM/Admin/Form/Mapping.php
 msgid "Field Mapping"
-msgstr ""
+msgstr "Feldzuordnung"
 
 #: CRM/Admin/Form/MessageTemplates.php
 #: templates/CRM/Admin/Page/MessageTemplates.hlp
@@ -687,7 +688,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Invoice Prefix"
-msgstr ""
+msgstr "Rechnungs-Präfix"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Enter prefix to be display on PDF for invoice"
@@ -1074,7 +1075,7 @@ msgstr "Bitte einen geeigneten Wert wählen"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Subject is a required field."
-msgstr ""
+msgstr "'Betreff' ist ein Pflichtfeld."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Please select entity value"
@@ -2009,7 +2010,7 @@ msgstr "Sind Sie sicher, dass Sie diese Zuordnung löschen möchten?"
 
 #: CRM/Admin/Page/Mapping.php
 msgid "This operation cannot be undone."
-msgstr ""
+msgstr "Dieser Vorgang kann nicht rückgängig gemacht werden."
 
 #: CRM/Admin/Page/Mapping.php
 msgid "Edit Mapping"
@@ -2268,7 +2269,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: About"
-msgstr ""
+msgstr "%1: Über"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Settings (External)"
@@ -2318,11 +2319,11 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Disconnect"
-msgstr ""
+msgstr "Trennen"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "New Connections"
-msgstr ""
+msgstr "Neue Verbindungen"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Connect"
@@ -2330,7 +2331,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Connect"
-msgstr ""
+msgstr "Verbinden"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "No available applications"
@@ -2384,7 +2385,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "External Link"
-msgstr ""
+msgstr "Externer Link"
 
 #: ang/crmCxn/PermTable.html
 msgid "Action(s)"
@@ -2392,7 +2393,7 @@ msgstr ""
 
 #: ang/crmCxn/PermTable.html
 msgid "Filter(s)"
-msgstr ""
+msgstr "Filter"
 
 #: ang/crmCxn/PermTable.html
 msgid "Field(s)"
@@ -4431,11 +4432,11 @@ msgstr "Gruppieren nach"
 
 #: templates/CRM/Admin/Page/APIExplorer.js
 msgid "Return Value"
-msgstr ""
+msgstr "Rückgabewert"
 
 #: templates/CRM/Admin/Page/APIExplorer.js
 msgid "Select field"
-msgstr ""
+msgstr "Feld auswählen"
 
 #: templates/CRM/Admin/Page/APIExplorer.js
 msgid "Auto-Select Current User"
@@ -4591,7 +4592,7 @@ msgstr "Joomla Zugriffskontrolle"
 
 #: templates/CRM/Admin/Page/Access.tpl
 msgid "WordPress Access Control"
-msgstr ""
+msgstr "Wordpress Zugriffskontrolle"
 
 #: templates/CRM/Admin/Page/Access.tpl
 msgid ""
@@ -5006,7 +5007,7 @@ msgstr "Autor"
 #: templates/CRM/Admin/Page/Extensions/AddNew.tpl
 #: templates/CRM/Admin/Page/Extensions/Main.tpl
 msgid "Version"
-msgstr ""
+msgstr "Version"
 
 #: templates/CRM/Admin/Page/ExtensionDetails.tpl
 msgid "Released on"
