--- a/po/nl_NL/admin.po
+++ b/po/nl_NL/admin.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-13 13:52+0000\n"
+"PO-Revision-Date: 2016-06-14 17:39+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -2703,7 +2703,7 @@ msgstr "Aangepast zoekpad"
 
 #: templates/CRM/Admin/Form/Options.tpl
 msgid "Enter the \"class path\" for this custom search here."
-msgstr "Vul het \"class path\" voor deze aangepaste zoekopdracht in."
+msgstr "Vul het 'class path' voor deze aangepaste zoekopdracht in."
 
 #: templates/CRM/Admin/Form/Options.tpl
 msgid ""
@@ -5510,7 +5510,7 @@ msgid ""
 "grant permission to roles <a href='%1'>here</a>... and you can assign "
 "role(s) to CiviCRM contacts who are users of your site <a "
 "href='%2'>here</a>."
-msgstr "Hieronder kunt u uw ACL-rollen toevoegen of bewerken. <a href='%1'>Hier</a> kunt u ACL's maken en rechten toekennen aan rollen. <a href='%2'>Hier</a> kunt u rollen toewijzen aan CiviCRM contacten die gebruiker zijn van uw site."
+msgstr "Hieronder kunt u uw ACL-rollen toevoegen of bewerken. U kunt <a href='%1'>hier</a> ACL's maken en rechten toekennen aan rollen. U kunt <a href='%2'>hier</a> rollen toewijzen aan CiviCRM-contacten die gebruiker zijn van uw site."
 
 #: templates/CRM/Admin/Page/Options.tpl
 msgid ""
