po: update po/nl_NL/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/contribute.po
+++ b/po/nl_NL/contribute.po
@@ -20,7 +20,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-13 14:23+0000\n"
+"PO-Revision-Date: 2016-06-14 16:00+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -4471,7 +4471,7 @@ msgstr "Gemiddelde bijdrage"
 
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 msgid "Total Cancelled Amount"
-msgstr "Totaal afgebroken bedrag"
+msgstr "Totaal geannuleerd bedrag"
 
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 msgid "# Completed Soft Credits"
