--- a/po/nl_NL/event.po
+++ b/po/nl_NL/event.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-01 14:17+0000\n"
+"PO-Revision-Date: 2016-06-14 16:39+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -2489,7 +2489,7 @@ msgid ""
 "Determine if the event is free or paid. For paid events, set the payment "
 "processor, fee level(s) and discounts. Give online registrants the option to"
 " 'pay later' (e.g. mail in a check, call in a credit card, etc.)."
-msgstr "Bepaal hier of het een gratis of betaald evenement is. Voor betaalde evenement kunt u hier de betaalmethode, tarieven en kortingen instellen. Geef deelnemers die online inschrijven de mogelijkheid om later te betalen (bijvoorbeeld: door een cheque op te sturen of hun creditcardnummer door te bellen)."
+msgstr "Bepaal hier of het een gratis of betaald evenement is. Voor een betaald evenement kunt u hier de betaalmethode, tarieven en kortingen instellen. Geef deelnemers die online inschrijven de mogelijkheid om later te betalen (bijvoorbeeld: door een cheque op te sturen of hun creditcardnummer door te bellen)."
 
 #: templates/CRM/Event/Form/ManageEvent/Tab.hlp
 msgid ""
